--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,8 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+p {
+  font-size: 3rem;
+  text-align: center;
+}
+
+#estatico {
+  margin-top: 100px;
+}
